...
            android:layout_marginStart="62dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="8dp"
            android:text="Welcome to Moody"
            android:textAlignment="center"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/registerFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/registerFirstName"
...
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/input"
            android:hint="First Name"
            android:paddingLeft="20dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/registerLastname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="303dp"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/input"
            android:hint="username"
            android:paddingLeft="20dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/registerEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerLastname" />

        <EditText
            android:id="@+id/registerEmail"
...
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/registerPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerUsername" />

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="303dp"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/registerPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

        <EditText
            android:id="@+id/registerPassword"
...
            android:layout_marginBottom="15dp"
            android:background="@drawable/input"
            android:hint="Phone Number"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassword" />

        <Button
            android:id="@+id/registerButton"
...
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_btn"
            android:paddingLeft="20dp"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPhone" />

        <EditText
...
